finish training and inference

--- a/notebooks/merge_distilled_dataset.ipynb
+++ b/notebooks/merge_distilled_dataset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Combine CSVs"
+    "### Merge distilled CSVs"
    ]
   },
   {
@@ -45,7 +45,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e5e9ff69-4e11-4699-ae12-d7b25aaf4203",
+       "ref": "771364e6-4260-45b9-ac4f-505a245d4218",
        "rows": [
         [
          "0",
@@ -300,7 +300,7 @@
        ],
        "shape": {
         "columns": 2,
-        "rows": 10000
+        "rows": 30000
        }
       },
       "text/html": [
@@ -358,63 +358,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9995</th>\n",
+       "      <th>29995</th>\n",
        "      <td>User: most recent, yes\\nAssistant:</td>\n",
        "      <td>Of course! To view the most recent posts in th...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9996</th>\n",
+       "      <th>29996</th>\n",
        "      <td>User: anyone know a good and reliable media pl...</td>\n",
        "      <td>One of the most popular and reliable media pla...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9997</th>\n",
+       "      <th>29997</th>\n",
        "      <td>User: xmms\\nAssistant:</td>\n",
        "      <td>It seems that XMMS is not installed on your sy...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9998</th>\n",
+       "      <th>29998</th>\n",
        "      <td>User: thanks, i'll try it\\nAssistant:</td>\n",
        "      <td>You're welcome! If you have any more questions...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9999</th>\n",
+       "      <th>29999</th>\n",
        "      <td>User: hello\\nAssistant:</td>\n",
        "      <td>I'd be happy to help with that! Here's a simpl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10000 rows × 2 columns</p>\n",
+       "<p>30000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 prompt  \\\n",
-       "0     User: Hello folks, please help me a bit with t...   \n",
-       "1     User: Did I choose a bad channel? I ask becaus...   \n",
-       "2     User: the second sentence is better english   ...   \n",
-       "3                        User: Sock Puppe?t\\nAssistant:   \n",
-       "4                                User: WTF?\\nAssistant:   \n",
-       "...                                                 ...   \n",
-       "9995                 User: most recent, yes\\nAssistant:   \n",
-       "9996  User: anyone know a good and reliable media pl...   \n",
-       "9997                             User: xmms\\nAssistant:   \n",
-       "9998              User: thanks, i'll try it\\nAssistant:   \n",
-       "9999                            User: hello\\nAssistant:   \n",
+       "                                                  prompt  \\\n",
+       "0      User: Hello folks, please help me a bit with t...   \n",
+       "1      User: Did I choose a bad channel? I ask becaus...   \n",
+       "2      User: the second sentence is better english   ...   \n",
+       "3                         User: Sock Puppe?t\\nAssistant:   \n",
+       "4                                 User: WTF?\\nAssistant:   \n",
+       "...                                                  ...   \n",
+       "29995                 User: most recent, yes\\nAssistant:   \n",
+       "29996  User: anyone know a good and reliable media pl...   \n",
+       "29997                             User: xmms\\nAssistant:   \n",
+       "29998              User: thanks, i'll try it\\nAssistant:   \n",
+       "29999                            User: hello\\nAssistant:   \n",
        "\n",
-       "                                               response  \n",
-       "0     You're correct! The sentence 'Order your perso...  \n",
-       "1     Alright, let's see if we can help you with tha...  \n",
-       "2     I apologize for any confusion. I'm here to hel...  \n",
-       "3     I'm here to help! It seems like you're asking ...  \n",
-       "4     That's a great lyric! The song is \"Respect You...  \n",
-       "...                                                 ...  \n",
-       "9995  Of course! To view the most recent posts in th...  \n",
-       "9996  One of the most popular and reliable media pla...  \n",
-       "9997  It seems that XMMS is not installed on your sy...  \n",
-       "9998  You're welcome! If you have any more questions...  \n",
-       "9999  I'd be happy to help with that! Here's a simpl...  \n",
+       "                                                response  \n",
+       "0      You're correct! The sentence 'Order your perso...  \n",
+       "1      Alright, let's see if we can help you with tha...  \n",
+       "2      I apologize for any confusion. I'm here to hel...  \n",
+       "3      I'm here to help! It seems like you're asking ...  \n",
+       "4      That's a great lyric! The song is \"Respect You...  \n",
+       "...                                                  ...  \n",
+       "29995  Of course! To view the most recent posts in th...  \n",
+       "29996  One of the most popular and reliable media pla...  \n",
+       "29997  It seems that XMMS is not installed on your sy...  \n",
+       "29998  You're welcome! If you have any more questions...  \n",
+       "29999  I'd be happy to help with that! Here's a simpl...  \n",
        "\n",
-       "[10000 rows x 2 columns]"
+       "[30000 rows x 2 columns]"
       ]
      },
      "execution_count": 2,
@@ -437,6 +437,163 @@
    "outputs": [],
    "source": [
     "merged_df.to_csv(\"sample/merged_distilled_dataset.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "prompt",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "response",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "b9ea1a90-03ba-454f-9bd6-c350ce2a4f5d",
+       "rows": [
+        [
+         "29995",
+         "User: most recent, yes\nAssistant:",
+         "Of course! To view the most recent posts in this subreddit, you can follow these steps:\n\n1. Open the Reddit app or website.\n2. Navigate to the subreddit you're interested in (e.g., r/askreddit).\n3. Look for the \"Hot\" or \"New\" tab. The \"New\" tab will show you the most recent posts.\n4. If you're on a computer, you can also use the \"Sort by: New\" option in the right sidebar.\n\nIf you're using a mobile app and can't find the"
+        ],
+        [
+         "29996",
+         "User: anyone know a good and reliable media player for listenting to internet radio?\nAssistant:",
+         "One of the most popular and reliable media players for listening to internet radio is TuneIn Radio. It offers a vast selection of radio stations from around the world, including music, news, sports, and talk radio. Another option is iHeartRadio, which also provides a wide variety of radio stations and personalized radio stations based on your preferences. Both apps are available on various platforms such as Android, iOS, and web browsers."
+        ],
+        [
+         "29997",
+         "User: xmms\nAssistant:",
+         "It seems that XMMS is not installed on your system. To install XMMS on Ubuntu, you can use the terminal. Here's a step-by-step guide:\n\n1. Open the terminal by pressing `Ctrl + Alt + T` or search for \"Terminal\" in"
+        ],
+        [
+         "29998",
+         "User: thanks, i'll try it\nAssistant:",
+         "You're welcome! If you have any more questions or need further assistance, feel free to ask. Good luck with your task!"
+        ],
+        [
+         "29999",
+         "User: hello\nAssistant:",
+         "I'd be happy to help with that! Here's a simple vegan chocolate cake recipe that you might like:\n\n**Vegan Chocolate Cake**\n\n**Ingredients:**\n\n* 1 3/4 cups all-purpose flour\n* 1 1/2 cups sugar\n* 3/4 cup unsweetened cocoa powder\n* 2 teaspoons baking soda"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29995</th>\n",
+       "      <td>User: most recent, yes\\nAssistant:</td>\n",
+       "      <td>Of course! To view the most recent posts in th...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29996</th>\n",
+       "      <td>User: anyone know a good and reliable media pl...</td>\n",
+       "      <td>One of the most popular and reliable media pla...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29997</th>\n",
+       "      <td>User: xmms\\nAssistant:</td>\n",
+       "      <td>It seems that XMMS is not installed on your sy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29998</th>\n",
+       "      <td>User: thanks, i'll try it\\nAssistant:</td>\n",
+       "      <td>You're welcome! If you have any more questions...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29999</th>\n",
+       "      <td>User: hello\\nAssistant:</td>\n",
+       "      <td>I'd be happy to help with that! Here's a simpl...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  prompt  \\\n",
+       "29995                 User: most recent, yes\\nAssistant:   \n",
+       "29996  User: anyone know a good and reliable media pl...   \n",
+       "29997                             User: xmms\\nAssistant:   \n",
+       "29998              User: thanks, i'll try it\\nAssistant:   \n",
+       "29999                            User: hello\\nAssistant:   \n",
+       "\n",
+       "                                                response  \n",
+       "29995  Of course! To view the most recent posts in th...  \n",
+       "29996  One of the most popular and reliable media pla...  \n",
+       "29997  It seems that XMMS is not installed on your sy...  \n",
+       "29998  You're welcome! If you have any more questions...  \n",
+       "29999  I'd be happy to help with that! Here's a simpl...  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000, 2)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df.shape"
    ]
   }
  ],
