--- a/notebooks/distillation.ipynb
+++ b/notebooks/distillation.ipynb
@@ -24,6 +24,10 @@
     }
    ],
    "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "\n",
     "import torch\n",
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -39,11 +43,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "os.environ[\"HF_TOKEN_INDIE\"] = \"\"\n",
     "from huggingface_hub import login\n",
     "login(token=os.environ[\"HF_TOKEN_INDIE\"])"
@@ -58,36 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Sliding Window Attention is enabled but not implemented for `sdpa`; unexpected results may be encountered.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fac926ee1eaf4ba7a274073b421ddcbb",
+       "model_id": "fd5168ccb13a4da8b01b0e7e797dead8",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
+       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some parameters are on the meta device because they were offloaded to the cpu.\n"
-     ]
     }
    ],
    "source": [
@@ -122,14 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
+    "LOW = 23000\n",
+    "HIGH = 24000\n",
+    "\n",
     "raw_dataset = load_dataset('csv', data_files='sample/dialogueText.csv')\n",
-    "raw_data = raw_dataset['train'].select(range(1000000))\n",
+    "raw_data = raw_dataset['train'].select(range(LOW, HIGH))\n",
     "\n",
     "def format_prompt(row):\n",
     "    return f'User: {row['text']}\\nAssistant:'"
@@ -168,15 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\neucl\\Dev\\NLP\\pytorch-cuda-12.1\\Lib\\site-packages\\transformers\\integrations\\sdpa_attention.py:54: UserWarning: 1Torch was not compiled with flash attention. (Triggered internally at ..\\aten\\src\\ATen\\native\\transformers\\cuda\\sdp_utils.cpp:455.)\n",
-      "  attn_output = torch.nn.functional.scaled_dot_product_attention(\n"
+      "Distilling: 100%|██████████| 1000/1000 [2:14:01<00:00,  8.04s/it] \n"
      ]
     }
    ],
@@ -207,20 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "distilled_df = pd.DataFrame(examples)\n",
-    "distilled_df.to_csv(\"sample/distilled_dataset.csv\", index=False)"
+    "distilled_df.to_csv(f\"sample/distilled_dataset_{LOW}_{HIGH-1}.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch-cuda-12.1",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -234,9 +225,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
